add executable | [wip] « ./cabal-static.project »

--- a/cabal.project
+++ b/cabal.project
@@ -1,18 +1,9 @@
 --------------------------------------------------
 
 packages: ./spiros
-
---------------------------------------------------
---------------------------------------------------
-
-documentation:            True
-haddock-hyperlink-source: True
+       -- ./spiros-base
 
 --------------------------------------------------
 
-package *
-  documentation:            True
-  haddock-hyperlink-source: True
+profiling: False
 
---------------------------------------------------
---------------------------------------------------
