Apache-2.0 license | add « doc » test-suite

--- a/cabal.project
+++ b/cabal.project
@@ -5,5 +5,12 @@ packages: ./spiros
 
 --------------------------------------------------
 
+tests:         True
+benchmarks:    True
+--documentation: True
+
+--------------------------------------------------
+
 profiling: False
 
+--------------------------------------------------
