[wip] Static-Linking

--- a/cabal.project
+++ b/cabal.project
@@ -7,7 +7,7 @@ packages: ./spiros
 
 tests:         True
 benchmarks:    True
---documentation: True
+documentation: False
 
 --------------------------------------------------
 
