--- a/spiros/spiros.cabal
+++ b/spiros/spiros.cabal
@@ -388,6 +388,8 @@ executable example-sprios
     ld-options: -static
                 -pthread
 
+ -- ghc-options: -pgml gcc "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lXYZ" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
+
    -- cc-options: -static
 
    -- ghc-options: -pgml g++
