docs | bump to « 0.3.3 »

--- a/cabal-ghc-7-10.project
+++ b/cabal-ghc-7-10.project
@@ -1,9 +1,11 @@
 --------------------------------------------------
 
-packages: ./spiros
+with-compiler: /usr/bin/ghc-7.10.3
 
 --------------------------------------------------
 
-with-compiler: /usr/bin/ghc-7.10.3
+packages: ./spiros
 
+--------------------------------------------------
+-- EOF -------------------------------------------
 --------------------------------------------------
