--- a/cabal.project
+++ b/cabal.project
@@ -1,14 +1,20 @@
 --------------------------------------------------
+-- Project ---------------------------------------
+--------------------------------------------------
 
 packages: ./spiros
        -- ./spiros-base
 
+--------------------------------------------------
+-- Components ------------------------------------
 --------------------------------------------------
 
 tests:         True
 benchmarks:    True
 documentation: False
 
+--------------------------------------------------
+-- Flags -----------------------------------------
 --------------------------------------------------
 
 profiling: False
@@ -18,5 +24,16 @@ profiling: False
 package hsc2hs
   documentation: False
   -- hsc2hs's Haddocks are broken.
+
+--------------------------------------------------
+-- Repositories ----------------------------------
+--------------------------------------------------
+
+repository stackage-lts-13.15
+  url: https://www.stackage.org/lts-13.15
+  -- <<< ghc-8.6.4 >>>
+
+  -- From:
+  -- https://www.stackage.org/lts-13.15/cabal.config?global=true
 
 --------------------------------------------------
