--- a/spiros/spiros.cabal
+++ b/spiros/spiros.cabal
@@ -90,7 +90,10 @@ data-dir: data
 
 --------------------------------------------------
 
-extra-source-files: README.md
+extra-source-files: LICENSE
+                  , README.md
+                  , CHANGELOG.md
+                  , ./share/images/*.png
 
 --------------------------------------------------
 
