--- a/cabal.project
+++ b/cabal.project
@@ -29,11 +29,10 @@ package hsc2hs
 -- Repositories ----------------------------------
 --------------------------------------------------
 
-repository stackage-lts-13.15
-  url: https://www.stackage.org/lts-13.15
+repository stackage-lts-13.17
+  url: https://www.stackage.org/lts-13.17
   -- <<< ghc-8.6.4 >>>
 
-  -- From:
-  -- https://www.stackage.org/lts-13.15/cabal.config?global=true
+  -- From: https://www.stackage.org/lts/cabal.config?global=true
 
 --------------------------------------------------
