--- a/spiros/spiros.cabal
+++ b/spiros/spiros.cabal
@@ -356,7 +356,7 @@ library
                 -- Extended Library --------------
                 ----------------------------------
 
-              , th-lift-instances
+              , th-lift-instances == 0.1.11
                 -- ^ « instance Lift Text », etc
 
               , exceptions >= 0.10
@@ -369,7 +369,7 @@ library
               , hashable >= 1.2.5
                 -- ^ « class Hashable »
 
-              , directory   >= 1.3
+              , directory   >= 1
               , filepath    >= 1.4
               , unix-compat >= 0.5
 
@@ -378,8 +378,9 @@ library
 
               , time    >= 1.8
               , cpuinfo >= 0.1.0.1
-           -- , clock
-                --NOTE clock fails on Android.
+
+           -- , clock >= 0.8
+                --NOTE clock may fail on Android.
 
                 ----------------------------------
                 -- Preludes ----------------------
